# math-rocks

./: Cargo.toml
proptest-regressions/: roll.txt
proptest-regressions/parser/: expr.txt  lexer.txt  parse.txt
src/: error.rs  lib.rs  roll.rs  roll_test_strategies.rs
src/parser/: error.rs  expr.rs  lexer.rs  mod.rs  parse.rs  str_test_strategies.rs  test_strategies.rs
