[package]
name = "math-rocks"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde"]

[dependencies]
rand = "0.9.1"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1.6.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
